# gregex

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
assets/: gregex_workflow.excalidraw
examples/: dot.rs  or.rs  star.rs
gregex-logic/: Cargo.toml  README.md
gregex-logic/src/: lib.rs  nfa.rs
gregex-logic/src/translation/: mod.rs  setterminal.rs
gregex-macros/: Cargo.toml  README.md
gregex-macros/src/: lib.rs
src/: lib.rs  nfa.rs  set_creation.rs  set_to_nfa.rs
src/translation/: linearize.rs  mod.rs  node.rs  operator.rs  setterminal.rs
