[package]
name = "gregex"
version = "0.7.1"
edition = "2021"
authors = ["Saphereye <adarshdas950@gmail.com>"]
license = "MIT"
description = "Regex solver utilizing NFA"
keywords = ["regex", "nfa", "automata"]
categories = ["text-processing"]
documentation = "https://docs.rs/gregex"
exclude = [
    ".github/",
    ".gitignore",
    "LICENSE",
    "README.md",
]
readme = "README.md"
repository = "https://github.com/Saphereye/gregex"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "gregex-macros",
    "gregex-logic",
]

[dependencies]
gregex-macros = { path = "gregex-macros" }
gregex-logic = { path = "gregex-logic" }
