[package]
name = "gregex-macros"
version = "0.1.1"
edition = "2021"
authors = ["Saphereye <adarshdas950@gmail.com>"]
license = "MIT"
description = "Proc-Macros for the gregex crate"
keywords = ["regex", "nfa", "automata"]
categories = ["text-processing"]
documentation = "https://docs.rs/gregex-macros"
exclude = [
    ".github/",
    ".gitignore",
    "LICENSE",
    "README.md",
]
readme = "README.md"
repository = "https://github.com/Saphereye/gregex/gregex-macros"

[dependencies]
gregex-logic = { path = "../gregex-logic", version = "0.1.0" }
syn = { version = "1.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"

[lib]
proc-macro = true